# personal-learning-manager

./: .gitignore  README.md  check_config.py  start_all.sh  start_backend.py  start_frontend.py  个人学习管理软件（题型&交互）开发需求精简版.md
.qoder/repowiki/zh/content/: 开发者指南.md  快速开始.md  测试与部署.md  项目概述.md
.qoder/repowiki/zh/content/AI服务集成/: AI服务集成.md  内容解析服务.md  知识点提取服务.md  通义千问服务封装.md  题目生成服务.md
.qoder/repowiki/zh/content/前端应用架构/: API客户端.md  Vue应用结构.md  (+3 more)
.qoder/repowiki/zh/meta/: repowiki-metadata.json
backend/: .env.example  .gitignore  check_db.py  export_data.py  pyproject.toml  test_api.py  test_full_flow.py  test_qwen.py  学习数据导出_20260215_123555.xlsx
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  directions.py  exams.py  gamification.py  learning_mode.py  materials.py  mistakes.py  parse.py  questions.py
backend/app/core/: __init__.py  achievements.py  config.py  daily_tasks.py  database.py  level_config.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: __init__.py  extractor_service.py  gamification_service.py  knowledge_service.py  learning_mode_service.py  parse_service.py  qwen_service.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: index.js
frontend/src/router/: index.js
frontend/src/views/: AchievementsView.vue  ExamResultView.vue  ExamStartView.vue  ExamTakingView.vue  ExplorerMapView.vue  HomeView.vue  LearningModeView.vue  MaterialsView.vue  MistakesView.vue  QuestionsView.vue
(+42 files in other folders)
